--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,9 @@ jobs:
         uses: ./.github/actions/cached-deps
         with: 
           caching: 'false'
+      - name: output information
+        run: echo "Cache used? ${{ steps.cache-deps.outputs.used-cache }}"
+
       - name: Lint code
         run: npm run lint
   test:
