--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,6 +68,8 @@ jobs:
   information:
     runs-on: ubuntu-latest
     steps:
+      - name: get code
+        uses: actions/checkout@v4
       - name: run custom action
         uses: ./.github/actions/deploy-s3-javascript
 
